# Mir2Like

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/3rd/: CMakeLists.txt
src/LoginGate/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/chat/: CMakeLists.txt  main.cpp
src/common/: log.hpp
src/database/: CMakeLists.txt  DBServer.cpp  DBServer.h  main.cpp  sDBServer.cpp  sDBServer.h  uMysql.cpp  uMysql.h
src/login/: CMakeLists.txt
